--- a/p2p/Cargo.toml
+++ b/p2p/Cargo.toml
@@ -9,3 +9,5 @@ tokio-core = "0.1.6"
 tokio-io = "0.1.1"
 futures = "0.1"
 futures-cpupool = "0.1"
+network = {path = "../network"}
+protocol = {path="../protocol"}
