--- a/protocol/Cargo.toml
+++ b/protocol/Cargo.toml
@@ -6,3 +6,4 @@ authors = ["xiaohuo <xiaohuo200@gmail.com>"]
 [dependencies]
 network = {path ="../network" }
 basictype = {path="../basictype"}
+serialization = {path="../serialization"}
