define payload type tx and block

--- a/protocol/Cargo.toml
+++ b/protocol/Cargo.toml
@@ -7,3 +7,4 @@ authors = ["xiaohuo <xiaohuo200@gmail.com>"]
 network = {path ="../network" }
 basictype = {path="../basictype"}
 serialization = {path="../serialization"}
+blockchain = {path="../blockchain"}
