--- a/monadmacro/Cargo.toml
+++ b/monadmacro/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 authors = ["xiaohuo <xiaohuo200@gmail.com>"]
 
 [dependencies]
+syn = "0.15"
+quote = "0.6"
+
+[lib]
+proc-macro = true
