develop serialize fn for Vec<T>

--- a/protocol/Cargo.toml
+++ b/protocol/Cargo.toml
@@ -8,3 +8,4 @@ network = {path ="../network" }
 basictype = {path="../basictype"}
 serialization = {path="../serialization"}
 blockchain = {path="../blockchain"}
+monadmacro = { path = "../monadmacro" }
